# poetry-template

./: README.md  os.sh  pyproject.toml  read.sh  setup-poetry-vscode.sh  setup-poetry.sh
