[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = ""
authors = ["sushi-chaaaan <sushi_code@outlook.jp>"]
readme = "README.md"
packages = [{include = "poetry_template"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
isort = "^5.10.1"
pyproject-flake8 = "^5.0.4.post1"
flake8-isort = "^5.0.0"

[tool.black]
line-length = 120

[tool.flake8]
ignore="W503"
max-line-length = 120
extend-exclude = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
